refactor: optimize Dockerfile for CVE maintenance
Refactors our container image to reduce the effort related to CVE
maintenance by:

- Build the final target on top of the latest available LTS ubuntu
  - This lets us track ubuntu updates much faster than via the Temurin
    image
- Upgrade all install required packages to the latest on build
- Build a custom JRE out of the official Temurin JDK
  - This lets us keep up to date with Temurin updates
  - As a bonus, we get to have a smaller JRE (via module compression),
    and keep useful production utilities: jcmd, jmap, jps
- The new image has a lower vulnerability count:
  - 12 issues across 203 dependencies: 3 med, 9 low
  - versus 20 issues across 237 dependencies: 4 med, 16 low
- The new image is smaller:
  - 357 MB over 8 layers: base (78), packages (3.8), JDK (101), and
    Zeebe (174)
  - 444 MB over 9 layers: base (73), packages (57), JDK (141), and
    Zeebe (174)

The main difference between using our own Java image versus the Temurin
base is the smaller JRE (due to module compression), and two packages I
haven't installed: locales, and tzdata. These contain language packs and
time zone info, two features we don't really use in Zeebe.

> **Note**
> This could affect third party code such as exporters and interceptors,
> so we may want to reintroduce this to provide an as-close-as-possible
> experience to stock JDK for users. However, I don't know if we have
> any real data to validate this. We don't do i18n (and I don't expect
> exporters or interceptors to as well), and it's better to deal with
> UTC in your producing system and only change it in your clients
> anyway.

(cherry picked from commit e646b1476392449993a5aff62324302273d33631)